AuctionHouse_WebApplication/src/main/java/com/example/auctionhouse_webapplication/error/EntityNotFoundException.java
package com.example.auctionhouse_webapplication.error;

public class EntityNotFoundException extends RuntimeException {
    public EntityNotFoundException(String message) {
        super(message);
    }
}
